stabilized order microservice